--- a/package.json
+++ b/package.json
@@ -58,7 +58,8 @@
     "eslint-plugin-react-hooks": "^4.5.0",
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
-    "prettier": "^2.6.2"
+    "prettier": "^2.6.2",
+    "typescript-plugin-css-modules": "^3.4.0"
   },
   "lint-staged": {
     "*.ts?(x)": [
