--- a/package.json
+++ b/package.json
@@ -37,7 +37,6 @@
     ]
   },
   "devDependencies": {
-    "typescript": "^4.6.4",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -45,6 +44,7 @@
     "@types/node": "^16.11.33",
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
+    "@types/react-redux": "^7.1.24",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.14.0",
@@ -58,7 +58,10 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "react-redux": "^8.0.2",
+    "redux": "^4.2.0",
     "sass": "^1.52.1",
+    "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0"
   },
   "lint-staged": {
