--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
+  "compilerOptions": {
+    "baseUrl": "src"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
