--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
   "compilerOptions": {
     "target": "es5",
+    "baseUrl": "./src",
     "plugins": [{ "name": "typescript-plugin-css-modules" }],
     "lib": [
       "dom",
