--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "redux": "^4.2.0",
+    "react-redux": "^8.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -58,8 +60,6 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
-    "react-redux": "^8.0.2",
-    "redux": "^4.2.0",
     "sass": "^1.52.1",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0"
