--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,7 +28,8 @@
   "rules": {
     "@typescript-eslint/comma-dangle": "off",
     "@typescript-eslint/default-param-last": "off",
-    "indent": ["error", 2],
+    "@typescript-eslint/indent": "off",
+    "indent": ["error", 2, { "SwitchCase": 1 }],
     "prettier/prettier": "error",
     "linebreak-style": [0, "unix"],
     "quotes": ["error", "single"],
