--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -29,6 +29,7 @@
     "@typescript-eslint/comma-dangle": "off",
     "@typescript-eslint/default-param-last": "off",
     "@typescript-eslint/indent": "off",
+    "@typescript-eslint/no-use-before-define": "off",
     "indent": ["error", 2, { "SwitchCase": 1 }],
     "prettier/prettier": "error",
     "linebreak-style": [0, "unix"],
