--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "dependencies": {
     "sass": "^1.52.1",
     "@mui/material": "^5.8.5",
+    "@emotion/react": "^11.9.3",
+    "@emotion/styled": "^11.9.3",
     "@redux-devtools/extension": "^3.2.2",
     "antd": "^4.21.3",
     "react": "^18.1.0",
