--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-thunk": "^2.4.1",
+    "uniqid": "^5.4.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -46,7 +47,6 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.52.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
@@ -55,6 +55,7 @@
     "@types/react": "^18.0.8",
     "@types/react-dom": "^18.0.3",
     "@types/react-redux": "^7.1.24",
+    "@types/uniqid": "^5.3.2",
     "@typescript-eslint/eslint-plugin": "^5.22.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^8.14.0",
@@ -68,6 +69,7 @@
     "husky": "^7.0.4",
     "lint-staged": "^12.4.1",
     "prettier": "^2.6.2",
+    "sass": "^1.52.1",
     "typescript": "^4.6.4",
     "typescript-plugin-css-modules": "^3.4.0"
   },
